--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^7.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-webcam": "^7.1.0",
     "save": "^2.3.1"
