--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,10 @@
     "cross-env": "^7.0.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
+    "eslint": "^8.42.0",
     "expect": "^26.1.0",
     "jest-junit": "^11.1.0",
+    "prettier": "^2.8.8",
     "react-test-renderer": "^16.13.1"
   },
   "browserslist": {
