--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /backend/public/uploads/videos
 /backend/node_modules
 /frontend/node_modules
+/frontend/public/favicon.ico
+/frontend/public/apple-touch-icon.png
+/frontend/public/manifest.json
+/frontend/public/android-chrome-192x192.png
+/frontend/public/android-chrome-512x512.png
+/frontend/public/favicon-16x16.png
+/frontend/public/favicon-32x32.png
